Changes with Apache 1.3b4

  *) A few cleanups in mod_info to make it thread-safe, and remove an
     off-by-5 bug that could hammer \0 on the stack. [Dean Gaudet]

  *) no2slash() was O(n^2) in the length of the input.  Make it O(n).
     [Dean Gaudet]

  *) migration from strncpy() to our "enhanced" version called
     ap_cpystrn() for performance and functionality reasons.
     Located in libap.a.  [Jim Jagielski]

  *) table_set() and table_unset() did not deal correctly with
     multiple occurrences of the same key. [Stephen Scheck
	 <sscheck@infonex.net>, Ben Laurie] PR#1604

  *) Correct handling of quotation marks in AuthName realm names; as a
     byproduct, a new function: ap_escape_quotes().  [Ken Coar] PR#1195

  *) WIN32: Work around optimiser bug that killed ISAPI in release
     versions. [Ben Laurie] PR#1533

  *) PORT: Update the MPE port [Mark Bixby, Jim Jagielski]

  *) Interim (slow) fix for p->sub_pool critical sections in
     alloc.c (affects win32 only).  [Ben Hyde]
  
  *) non-WIN32 was missing destroy_mutex definition.  [Ben Hyde]
  
  *) send_fd_length() did not calculate total_bytes_sent properly.
     [Ben Reser <breser@regnow.com>] PR#1366

  *) The large_write() changes tickled a bug in bputc(), this would
     show up as certain modules not working with Internet Explorer 4.0.
     Fix this bug, and also fix a performance bug related to bputc()
     causing a large_write() -- don't do large_write() unless there's
     at least two bytes to write.  [Dean Gaudet]

  *) Move the gid switching code into the child so that log files
     and pid files are opened with the root gid.
     [Gregory A Lundberg <lundberg@vr.net>]

  *) WIN32: Check for binaries by looking for the executable header
     instead of counting control characters.
	 [Jim Patterson <Jim.Patterson@Cognos.COM>] PR#1340

  *) ap_snprintf() moved from main/util_snprintf.c to ap/ap_snprintf.c
     so the functionality is available to applications other than the