@@ -64,6 +64,7 @@ Committed Code Changes:
     * Dean's [PATCH] 1.3: "DoS" attack
     * Paul/Ben's [PATCH] 1.3: spaces in NT spawn* arguments
     * Dean's [PATCH] mod_info minor cleanups (take 2)
+    * Dean's [PATCH] mod_status cleanups
 
 Available Patches:
 
@@ -75,10 +76,6 @@ Available Patches:
     * [PATCH] mod_digest/1599: proxy authentication using the digest auth
       scheme never succeeds (fwd)
 	<Pine.LNX.3.95dg3.971225184830.17380C-100000@twinlark.arctic.org>
-	Status: Dean +1, Jim +1
-
-    * Dean's [PATCH] mod_status cleanups
-	<Pine.LNX.3.95dg3.971220023128.4924E-100000@twinlark.arctic.org>
 	Status: Dean +1, Jim +1
 
     * Martin's [PATCH] 36kB: Make apache compile & run on an EBCDIC mainframe
